<resources>
    <string name="app_name">KidsIQ</string>
    <string name="true_text">true</string>
    <string name="false_text">false</string>
    <string name="question_1">The Atlantic Ocean is the biggest ocean on Earth.</string>
    <string name="correct_answer">That\'s correct</string>
    <string name="wrong_answer">That\'s incorrect</string>
    <string name="question_2">Conductors have low resistance.</string>
    <string name="question_3">Molecules are chemically bonded.</string>
    <string name="question_4">The study of plants is known as botany.</string>
    <string name="question_5">Half of 226 is 113.</string>
    <string name="question_6">Water is an example of a chemical element.</string>
    <string name="question_7">Spiders have six legs</string>
    <string name="question_8">Kelvin is a measure of temperature.</string>
    <string name="next_text">next</string>
    <string name="todo">TODO</string>
    <string name="answer_text_view">TextView</string>

</resources>
